[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/UI/Background.png" type="Texture" id=1]
[ext_resource path="res://Assets/UI/SpriteBorder.png" type="Texture" id=2]
[ext_resource path="res://UI/CustomizeMenu.gd" type="Script" id=3]
[ext_resource path="res://Assets/Fonts/Star7-Eaowe.otf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/Cars/CustomCarChoice/Sports-Car-2-stripe-white.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/ArrowButton.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 55
font_data = ExtResource( 4 )

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item; 

uniform vec4 color : hint_color; 
uniform vec4 accent_color : hint_color; 

void fragment() {
	vec4 pixelColor = texture(TEXTURE, UV); 
	
	if (pixelColor.rgb == vec3(1,1,1)) {
		COLOR = vec4(color.rgb, pixelColor.a)
	} else if (pixelColor.rgb == vec3(0,0,1)) {
		COLOR = accent_color
	} else {
		COLOR = pixelColor
	}
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/color = null
shader_param/accent_color = null

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 4 )

[node name="Control" type="Control"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
script = ExtResource( 3 )

[node name="Label" type="Label" parent="TextureRect"]
anchor_bottom = 0.174
margin_left = 64.0
margin_top = 30.0
margin_right = 389.0
margin_bottom = -18.4
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
text = "Customize"
valign = 1

[node name="SpriteBorder" type="TextureRect" parent="TextureRect"]
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 64.0
margin_top = 108.0
margin_right = -416.0
margin_bottom = -460.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 12, 12 )
texture = ExtResource( 2 )
stretch_mode = 6

[node name="SkinSprite" type="TextureRect" parent="TextureRect/SpriteBorder"]
material = SubResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 32.0
margin_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )
stretch_mode = 4

[node name="LeftTextureButton" type="TextureButton" parent="TextureRect/SpriteBorder"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 14.0
margin_right = -20.0
margin_bottom = -4.0
rect_scale = Vector2( 0.25, 0.25 )
texture_normal = ExtResource( 6 )

[node name="RightTextureButton" type="TextureButton" parent="TextureRect/SpriteBorder"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 28.0
margin_top = 14.0
margin_right = 4.0
margin_bottom = -4.0
rect_scale = Vector2( -0.25, 0.25 )
texture_normal = ExtResource( 6 )

[node name="MainColorButton" type="ColorPickerButton" parent="TextureRect"]
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_top = 108.0
margin_right = -64.0
margin_bottom = -442.0
edit_alpha = false

[node name="MainColorLabel" type="Label" parent="TextureRect/MainColorButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 192.0
margin_top = 3.0
margin_right = -192.0
margin_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
text = "Primary Color"
align = 1
valign = 1

[node name="AccentColorButton" type="ColorPickerButton" parent="TextureRect"]
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_top = 188.0
margin_right = -64.0
margin_bottom = -362.0
edit_alpha = false

[node name="AccentColorLabel" type="Label" parent="TextureRect/AccentColorButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 192.0
margin_top = 3.0
margin_right = -192.0
margin_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
text = "Accent Color"
align = 1
valign = 1

[node name="SaveButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -226.0
margin_top = -50.0
margin_right = -150.0
margin_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = SubResource( 2 )
text = "Save"

[node name="Cancel Button" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -130.0
margin_top = -50.0
margin_right = -20.0
margin_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = SubResource( 2 )
text = "Cancel"

[connection signal="mouse_entered" from="TextureRect/SpriteBorder/LeftTextureButton" to="TextureRect" method="_on_LeftTextureButton_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect/SpriteBorder/LeftTextureButton" to="TextureRect" method="_on_LeftTextureButton_mouse_exited"]
[connection signal="pressed" from="TextureRect/SpriteBorder/LeftTextureButton" to="TextureRect" method="_on_LeftTextureButton_pressed"]
[connection signal="mouse_entered" from="TextureRect/SpriteBorder/RightTextureButton" to="TextureRect" method="_on_RightTextureButton_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect/SpriteBorder/RightTextureButton" to="TextureRect" method="_on_RightTextureButton_mouse_exited"]
[connection signal="pressed" from="TextureRect/SpriteBorder/RightTextureButton" to="TextureRect" method="_on_RightTextureButton_pressed"]
[connection signal="color_changed" from="TextureRect/MainColorButton" to="TextureRect" method="_on_MainColorButton_color_changed"]
[connection signal="color_changed" from="TextureRect/AccentColorButton" to="TextureRect" method="_on_AccentColorButton_color_changed"]
[connection signal="pressed" from="SaveButton" to="TextureRect" method="_on_SaveButton_pressed"]
[connection signal="pressed" from="Cancel Button" to="TextureRect" method="_on_Cancel_Button_pressed"]
